# PythonVehicleSimulator

./: .gitignore  pyproject.toml  simData_tau.csv
src/python_vehicle_simulator/: data_gen.py  dynamics.py  main.py
src/python_vehicle_simulator/lib/: actuator.py  gnc.py  mainLoop.py  plotTimeSeries.py
src/python_vehicle_simulator/vehicles/: DSRV.py  ROVzefakkel.py  frigate.py  otter.py  remus100.py  semisub.py  shipClarke83.py  supply.py  tanker.py  torpedo.py
