[tool.poetry]
name = "pythonvehiclesimulator"
version = "0.1.0"
description = ""
authors = ["dream-oyh <1399541701@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
